buildscript {
  repositories {
    mavenCentral()
  }
  dependencies {
    classpath("com.diffplug.spotless:spotless-plugin-gradle:6.13.0")
  }
}

subprojects {
  apply plugin: "java"
  apply plugin: "com.diffplug.spotless"

  group "io.tabular.iceberg.connect"
  version "0.0.1"

  repositories {
    mavenCentral()
  }

  sourceCompatibility = '1.8'
  targetCompatibility = '1.8'

  test {
    useJUnitPlatform()
  }

  configurations {
    testImplementation.extendsFrom testCompileOnly
  }

  spotless {
    java {
      target "src/**/*.java"
      googleJavaFormat("1.7")
      removeUnusedImports()
      licenseHeaderFile "$rootDir/LICENSE.txt"
    }
  }
}
